# InkRunner

./: .gitmodules  CMakeLists.txt  README.md  index.html  main.cpp  story.ink  wait_for_key.hpp
generators/: compile_ink_bin.cpp
